Fixed bug #37306 (max_execution_time = max_input_time).